# FastAPI-Shop-project

./: README.md  pyproject.toml
app/api/schemas/: batch.py  order_line.py
app/config/: settings.py
app/domain/models/: batch.py  order_line.py
app/schemas/: batch.py  order_line.py
tests/: conftest.py  utils.py
tests/tests_schemas/: test_domain_models.py  test_schemas.py
