[tool.poetry]
name = "fastapi-shop-project"
version = "0.1.0"
description = ""
authors = ["RocketMenace"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
alembic = "^1.16.2"
dishka = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
